gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail12622.d
version https://git-lfs.github.com/spec/v1
oid sha256:8c3cca5a9b2e54c5fe38b5a36c27de25b1f5e80b63948f47b073f89a80da8934
size 1343
